# map-guided-recon3d

./: .gitignore  demo.py  demo.sh  demo_save_weight.py  demo_save_weight.sh  environment.yml  pyproject.toml
configs/: da3-small.yaml  mg3-base.yaml
src/: __init__.py  depth_modules.py  depth_tokenizer.py  fusion_encoder.py  recon3d.py  vision_transformer.py
test_scripts/: visualize_depth.py
training/: loss.py  pip_list.txt  trainer.py
training/config/: default.yaml
training/config/model/: mg3_base.yaml
training/data/: composed_dataset.py  dataset_util.py  track_util.py
training/data/datasets/: tartanair.py
training/train_utils/: distortion_util.py  geometry_util.py  normalization.py
